samples/_failures_safe/1761402562_b21ce7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b481dd9.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_3b481dd9.c:161:37: error: missing terminating " character
  161 |         case TOKEN_OPERATOR: return "OPER
      |                                     ^~~~~
./samples/SAFE/__tmp_3b481dd9.c:161:9: error: expected expression at end of input
  161 |         case TOKEN_OPERATOR: return "OPER
      |         ^~~~
./samples/SAFE/__tmp_3b481dd9.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b481dd9.c:161:9: error: expected declaration or statement at end of input
